cmake_minimum_required(VERSION 3.17)
project(ativ_praticas_ed2)

set(CMAKE_CXX_STANDARD 11)

add_executable(ativ_praticas_ed2
#        ordenacao/main.cpp
#        hashing_1/main.cpp hashing_1/Hash.cpp hashing_1/Hash.h
#        hashing_2/main.cpp hashing_2/Hash.cpp hashing_2/Hash.h
#        arvore_avl/main.cpp arvore_avl/NoAVL.h arvore_avl/ArvoreAVL.cpp arvore_avl/ArvoreAVL.h
        arvore_splay/main.cpp arvore_splay/no.h arvore_splay/splay.cpp arvore_splay/splay.h
        )